Fixed crazy large paragraph spacing.

--- a/src/sass/utils/_typography.scss
+++ b/src/sass/utils/_typography.scss
@@ -22,13 +22,13 @@ body {
   h1, h2, h3, h4, h5, h6, blockquote, q,
   p, ul {
     padding: 0 .5rem;
-    margin: 0 0 $large 0;
+    margin: 0 0 $medium 0;
     display: block;
   }
 
   img, .gatsby-highlight {
     width: 100%;
-    margin: 0 0 $large 0;
+    margin: 0 0 $medium 0;
     display: block;
   }
 
